--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -207,3 +207,41 @@ h2 {
 	color: var(--clr-orange);
 	margin: 2rem 0 1rem 0;
 }
+
+label {
+	color: white;
+}
+
+/* ----------------------- */
+
+/* #radios label {
+	position: relative;
+} */
+
+/* input[type='radio'] {
+	position: absolute;
+	opacity: 0;
+} */
+
+.rating-form {
+	display: flex;
+}
+
+.rating-number {
+	/* border: 0; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 50px;
+	height: 50px;
+	border-radius: 99px;
+	color: white;
+	background-color: blue;
+}
+
+input:checked + button {
+	background-color: green;
+}
+input:checked + .rating-number {
+	background-color: green;
+}
