--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ html {
 /* utility classes */
 
 html {
-	background-color: var(--clr-very-dark-blue);
+	/* background-color: var(--clr-very-dark-blue); */
 }
 
 p {
