removed unneeded functions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -240,6 +240,11 @@ input[type='radio'] {
 	opacity: 0;
 }
 
+input:focus-visible + .rating-number {
+	background-color: var(--clr-white);
+	color: black;
+}
+
 .rating-number {
 	color: var(--clr-light-grey);
 	background-color: var(--clr-dark-blue);
